--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <title>Tojások</title>
 </head>
 <body>
-    <div class="container-flex"></div>
+    <div class="container-flex">
+
+        <div>
+            <header><h2>L</h2>
+            <img src="L.jpg" alt=""></header>
+            <article></article>
+        </div>
+        <div>
+            <header><h2>M</h2>
+            <img src="M.jpg" alt=""></header>
+            <article></article>
+        </div>
+        <div>
+            <header><h2>S</h2>
+            <img src="S.jpg" alt=""></header>
+            <article></article>
+        </div>
+    </div>
 </body>
 </html>
