--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="description" content="Egy Weboldal a tojásokról">
     <meta name="keywords" content="Flex, Tojás, Tojásár, Ár, T jás">
     <meta name="title" content="Tojások">
+    <link rel="stylesheet" href="css/style.css">
     <title>Tojások</title>
 </head>
 <body>
-    <div class="container-flex"></div>
+    <div class="container-flex">
+        <footer><h3>Forrás</h3><p>Féderer Dávid&copy; </p></footer>
+    </div>
 </body>
 </html>
