--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
         <div>
             <header><h2>L</h2>
-            <img src="L.jpg" alt=""></header>
+            <img src="L.jpg" alt="L-es tojás" title="L-es tojás"></header>
             <article></article>
         </div>
         <div>
             <header><h2>M</h2>
-            <img src="M.jpg" alt=""></header>
+            <img src="M.jpg" alt="M-es tojás" title="M-es tojás"></header>
             <article></article>
         </div>
         <div>
             <header><h2>S</h2>
-            <img src="S.jpg" alt=""></header>
+            <img src="S.jpg" alt="S-es tojás" title="S-es tojás"></header>
             <article></article>
         </div>
     </div>
