--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <img src="S.jpg" alt="S-es tojás" title="S-es tojás"></header>
             <article></article>
         </div>
+        <div></div>
     </div>
 </body>
 </html>
