--- a/index.html
+++ b/index.html
@@ -12,23 +12,49 @@
 </head>
 <body>
     <div class="container-flex">
-        <footer><h3>Forrás</h3><p>Féderer Dávid&copy; </p></footer>
-
         <div>
-            <header><h2>L</h2>
-            <img src="L.jpg" alt=""></header>
-            <article></article>
-        </div>
+            <header>
+                <h2>L</h2>
+                <img src="L.jpg" alt="">
+            </header>
+            <article>
+                <p>Adatok:</p>
+                <ul>
+                    <li>Ár: 40 Ft / db</li>
+                    <li>Tömeg: 63-72g</li>
+                    
+                </ul>
+            </article>
+            </div>
+            <div>
+                <header>
+                    <h2>M</h2>
+                    <img src="M.jpg" alt="">
+                </header>
+                <article>
+                    <p>Adatok:</p>
+                    <ul>
+                        <li>Ár: x Ft / db</li>
+                        <li>Tömeg: 53-62g</li>
+                    </ul>
+                </article>
+            </div>
         <div>
-            <header><h2>M</h2>
-            <img src="M.jpg" alt=""></header>
-            <article></article>
+            <header>
+                <h2>S</h2>
+                <img src="S.jpg" alt="">
+            </header>
+            <article>
+                <p>Adatok:</p>
+                <ul>
+                    <li>Ár: x Ft / db</li>
+                    <li>Tömeg: >53g</li>
+                </ul>
+            </article>
         </div>
-        <div>
-            <header><h2>S</h2>
-            <img src="S.jpg" alt=""></header>
-            <article></article>
-        </div>
+    </div>
+    <div class="container-flex">
+        <footer><h3>Forrás</h3><p>Féderer Dávid&copy;</p></footer>
     </div>
 </body>
 </html>
