--- a/index.html
+++ b/index.html
@@ -52,10 +52,28 @@
                 </ul>
             </article>
         </div>
-        <div></div>
+     
+    </div>
+    
+    <div>
+        <form>
+            <h2>Calculator</h2>
+            <h3>Méretek:</h3>
+            <select name="meret" id="meret">
+                <option value="L">L</option>
+                <option value="M">M</option>
+                <option value="S">S</option>
+            </select>
+            <h3>Spórolási lehetőség:</h3>
+            <select name="hiba" id="hiba">
+                <option value="torott">Törött (-5 Ft/db)</option>
+                <option value="piszkos">Piszkos (-10 Ft/db)</option>
+            </select>
+        </form>
     </div>
     <div class="container-flex">
         <footer><h3>Forrás</h3><p>Féderer Dávid&copy;</p></footer>
     </div>
+
 </body>
 </html>
