--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div>
             <header>
                 <h2>L</h2>
-                <img src="L.jpg" alt="">
+                <p><img src="img/L.png" alt=""></p>
             </header>
             <article>
                 <p>Adatok:</p>
                 <ul>
-                    <li>Ár: 40 Ft / db</li>
+                    <li>Ár: 45 Ft / db</li>
                     <li>Tömeg: 63-72g</li>
                     
                 </ul>
@@ -29,12 +29,12 @@
             <div>
                 <header>
                     <h2>M</h2>
-                    <img src="M.jpg" alt="">
+                    <p><img src="img/M.png" alt=""></p>
                 </header>
                 <article>
                     <p>Adatok:</p>
                     <ul>
-                        <li>Ár: x Ft / db</li>
+                        <li>Ár: 40 Ft / db</li>
                         <li>Tömeg: 53-62g</li>
                     </ul>
                 </article>
@@ -42,19 +42,16 @@
         <div>
             <header>
                 <h2>S</h2>
-                <img src="S.jpg" alt="">
+                <p><img src="img/S.png" alt=""></p>
             </header>
             <article>
                 <p>Adatok:</p>
                 <ul>
-                    <li>Ár: x Ft / db</li>
+                    <li>Ár: 35 Ft / db</li>
                     <li>Tömeg: >53g</li>
                 </ul>
             </article>
         </div>
-        <div></div>
-    </div>
-    <div class="container-flex">
         <footer><h3>Forrás</h3><p>Féderer Dávid&copy;</p></footer>
     </div>
 </body>
