--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
     <div class="container-flex">
         <footer><h3>Forrás</h3><p>Féderer Dávid&copy;</p></footer>
     </div>
-
+    <script src="js.js"></script>
 </body>
 </html>
